updated notebooks and outputs

--- a/iot-timeseries-forecasting/updated_notebooks/3.2_autoformer_transformer_model_updated.ipynb
+++ b/iot-timeseries-forecasting/updated_notebooks/3.2_autoformer_transformer_model_updated.ipynb
@@ -2,10 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "14f1018e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nAutoformer: Enhancing Transformers for Time Series Forecasting\\n\\nAutoformer improves Transformers for time series forecasting by introducing two key innovations:\\n\\n1. **Decomposition of Input Series**: The input time series is decomposed into trend and seasonality components. This allows the model to focus on learning each component separately, improving its ability to capture long-term dependencies and patterns. ✂️\\n\\n2. **Improved Long-Term Prediction**: By learning the trend and seasonality components independently, Autoformer enhances its forecasting accuracy, especially for long-term predictions. 📈\\n\\nThis implementation is designed to be clean, lightweight, and runnable, similar to the Informer model.\\n'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Autoformer: Enhancing Transformers for Time Series Forecasting\n",
@@ -22,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3a13b69b",
    "metadata": {},
    "outputs": [
@@ -59,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "006244dc",
    "metadata": {},
    "outputs": [],
@@ -72,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "879f87de",
    "metadata": {},
    "outputs": [],
@@ -88,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d1be6cd2",
    "metadata": {},
    "outputs": [],
@@ -104,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "73956b1f",
    "metadata": {},
    "outputs": [
@@ -112,11 +123,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Epoch 1] Train Loss: 0.0302\n",
-      "[Epoch 2] Train Loss: 0.0007\n",
-      "[Epoch 3] Train Loss: 0.0006\n",
-      "[Epoch 4] Train Loss: 0.0006\n",
-      "[Epoch 5] Train Loss: 0.0006\n",
+      "[Epoch 1] Train Loss: 0.0222\n",
+      "[Epoch 2] Train Loss: 0.0005\n",
+      "[Epoch 3] Train Loss: 0.0005\n",
+      "[Epoch 4] Train Loss: 0.0005\n",
+      "[Epoch 5] Train Loss: 0.0005\n",
       "[Epoch 6] Train Loss: 0.0006\n",
       "[Epoch 7] Train Loss: 0.0006\n",
       "[Epoch 8] Train Loss: 0.0006\n",
@@ -148,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "2730cb68",
    "metadata": {},
    "outputs": [
@@ -169,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "3a3ba483",
    "metadata": {},
    "outputs": [],
@@ -184,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "ea2baee8",
    "metadata": {},
    "outputs": [],
@@ -247,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "c21b45e1",
    "metadata": {},
    "outputs": [
@@ -256,9 +267,9 @@
      "output_type": "stream",
      "text": [
       "📊 📈 Train Set Forecast vs True\n",
-      " - MSE   : 0.000664\n",
-      " - MAE   : 0.020301\n",
-      " - SMAPE : 8.33%\n",
+      " - MSE   : 0.000487\n",
+      " - MAE   : 0.016177\n",
+      " - SMAPE : 5.29%\n",
       "✅ Plot saved to ../../outputs/metrics/autoformer/train_plot.png\n",
       "✅ Results saved to ../../outputs/metrics/autoformer/train_results.csv\n",
       "\n"
@@ -268,7 +279,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\BERAT\\AppData\\Local\\Temp\\ipykernel_2660\\437124191.py:44: UserWarning: Glyph 128200 (\\N{CHART WITH UPWARDS TREND}) missing from font(s) DejaVu Sans.\n",
+      "/var/folders/s8/pp3cmgsj1h3gqdc1dpxr6yzm0000gn/T/ipykernel_15709/437124191.py:44: UserWarning: Glyph 128200 (\\N{CHART WITH UPWARDS TREND}) missing from font(s) DejaVu Sans.\n",
       "  plt.savefig(f\"../../outputs/metrics/autoformer/{file_prefix}_plot.png\")\n"
      ]
     },
@@ -277,9 +288,9 @@
      "output_type": "stream",
      "text": [
       "📊 📈 Validation Set Forecast vs True\n",
-      " - MSE   : 0.000059\n",
-      " - MAE   : 0.006783\n",
-      " - SMAPE : 5.91%\n",
+      " - MSE   : 0.000020\n",
+      " - MAE   : 0.003311\n",
+      " - SMAPE : 2.78%\n",
       "✅ Plot saved to ../../outputs/metrics/autoformer/val_plot.png\n",
       "✅ Results saved to ../../outputs/metrics/autoformer/val_results.csv\n",
       "\n"
@@ -289,7 +300,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\BERAT\\AppData\\Local\\Temp\\ipykernel_2660\\437124191.py:44: UserWarning: Glyph 128200 (\\N{CHART WITH UPWARDS TREND}) missing from font(s) DejaVu Sans.\n",
+      "/var/folders/s8/pp3cmgsj1h3gqdc1dpxr6yzm0000gn/T/ipykernel_15709/437124191.py:44: UserWarning: Glyph 128200 (\\N{CHART WITH UPWARDS TREND}) missing from font(s) DejaVu Sans.\n",
       "  plt.savefig(f\"../../outputs/metrics/autoformer/{file_prefix}_plot.png\")\n"
      ]
     },
@@ -298,9 +309,9 @@
      "output_type": "stream",
      "text": [
       "📊 📈 Test Set Forecast vs True\n",
-      " - MSE   : 0.000043\n",
-      " - MAE   : 0.005701\n",
-      " - SMAPE : 2.63%\n",
+      " - MSE   : 0.000021\n",
+      " - MAE   : 0.003516\n",
+      " - SMAPE : 1.60%\n",
       "✅ Plot saved to ../../outputs/metrics/autoformer/test_plot.png\n",
       "✅ Results saved to ../../outputs/metrics/autoformer/test_results.csv\n",
       "\n"
@@ -310,7 +321,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\BERAT\\AppData\\Local\\Temp\\ipykernel_2660\\437124191.py:44: UserWarning: Glyph 128200 (\\N{CHART WITH UPWARDS TREND}) missing from font(s) DejaVu Sans.\n",
+      "/var/folders/s8/pp3cmgsj1h3gqdc1dpxr6yzm0000gn/T/ipykernel_15709/437124191.py:44: UserWarning: Glyph 128200 (\\N{CHART WITH UPWARDS TREND}) missing from font(s) DejaVu Sans.\n",
       "  plt.savefig(f\"../../outputs/metrics/autoformer/{file_prefix}_plot.png\")\n"
      ]
     }
@@ -339,7 +350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
