--- a/iot-timeseries-forecasting/updated_notebooks/3.3_PatchTST_transformer_model_updated.ipynb
+++ b/iot-timeseries-forecasting/updated_notebooks/3.3_PatchTST_transformer_model_updated.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a015c5d0",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "9262a33c",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "77970523",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "aa8d826a",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "d46b618b",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "009b6bc8",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "196fe8cd",
    "metadata": {},
    "outputs": [
@@ -137,16 +137,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Epoch 1] Train Loss: 0.0333\n",
-      "[Epoch 2] Train Loss: 0.0042\n",
-      "[Epoch 3] Train Loss: 0.0041\n",
-      "[Epoch 4] Train Loss: 0.0041\n",
-      "[Epoch 5] Train Loss: 0.0038\n",
-      "[Epoch 6] Train Loss: 0.0037\n",
+      "[Epoch 1] Train Loss: 0.0416\n",
+      "[Epoch 2] Train Loss: 0.0043\n",
+      "[Epoch 3] Train Loss: 0.0042\n",
+      "[Epoch 4] Train Loss: 0.0039\n",
+      "[Epoch 5] Train Loss: 0.0040\n",
+      "[Epoch 6] Train Loss: 0.0038\n",
       "[Epoch 7] Train Loss: 0.0036\n",
       "[Epoch 8] Train Loss: 0.0036\n",
-      "[Epoch 9] Train Loss: 0.0033\n",
-      "[Epoch 10] Train Loss: 0.0032\n"
+      "[Epoch 9] Train Loss: 0.0035\n",
+      "[Epoch 10] Train Loss: 0.0031\n"
      ]
     }
    ],
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "81eca9c2",
    "metadata": {},
    "outputs": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "cf340be5",
    "metadata": {},
    "outputs": [],
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "1095c151",
    "metadata": {},
    "outputs": [],
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "ed3ce694",
    "metadata": {},
    "outputs": [
@@ -283,9 +283,9 @@
      "output_type": "stream",
      "text": [
       "📊 📈 Train Set Forecast vs True\n",
-      " - MSE   : 0.002768\n",
-      " - MAE   : 0.041088\n",
-      " - SMAPE : 13.24%\n",
+      " - MSE   : 0.006373\n",
+      " - MAE   : 0.067395\n",
+      " - SMAPE : 20.55%\n",
       "✅ Plot saved to ../../outputs/metrics/patchTST/train_plot.png\n",
       "✅ Results saved to ../../outputs/metrics/patchTST/train_results.csv\n",
       "\n"
@@ -295,7 +295,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\BERAT\\AppData\\Local\\Temp\\ipykernel_2940\\1469885757.py:45: UserWarning: Glyph 128200 (\\N{CHART WITH UPWARDS TREND}) missing from font(s) DejaVu Sans.\n",
+      "/var/folders/s8/pp3cmgsj1h3gqdc1dpxr6yzm0000gn/T/ipykernel_15834/1469885757.py:45: UserWarning: Glyph 128200 (\\N{CHART WITH UPWARDS TREND}) missing from font(s) DejaVu Sans.\n",
       "  plt.savefig(f\"{output_dir}/{file_prefix}_plot.png\")\n"
      ]
     },
@@ -304,9 +304,9 @@
      "output_type": "stream",
      "text": [
       "📊 📈 Validation Set Forecast vs True\n",
-      " - MSE   : 0.000150\n",
-      " - MAE   : 0.010009\n",
-      " - SMAPE : 8.32%\n",
+      " - MSE   : 0.000419\n",
+      " - MAE   : 0.017423\n",
+      " - SMAPE : 13.89%\n",
       "✅ Plot saved to ../../outputs/metrics/patchTST/val_plot.png\n",
       "✅ Results saved to ../../outputs/metrics/patchTST/val_results.csv\n",
       "\n"
@@ -316,7 +316,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\BERAT\\AppData\\Local\\Temp\\ipykernel_2940\\1469885757.py:45: UserWarning: Glyph 128200 (\\N{CHART WITH UPWARDS TREND}) missing from font(s) DejaVu Sans.\n",
+      "/var/folders/s8/pp3cmgsj1h3gqdc1dpxr6yzm0000gn/T/ipykernel_15834/1469885757.py:45: UserWarning: Glyph 128200 (\\N{CHART WITH UPWARDS TREND}) missing from font(s) DejaVu Sans.\n",
       "  plt.savefig(f\"{output_dir}/{file_prefix}_plot.png\")\n"
      ]
     },
@@ -325,9 +325,9 @@
      "output_type": "stream",
      "text": [
       "📊 📈 Test Set Forecast vs True\n",
-      " - MSE   : 0.000110\n",
-      " - MAE   : 0.008246\n",
-      " - SMAPE : 3.74%\n",
+      " - MSE   : 0.000404\n",
+      " - MAE   : 0.017387\n",
+      " - SMAPE : 7.64%\n",
       "✅ Plot saved to ../../outputs/metrics/patchTST/test_plot.png\n",
       "✅ Results saved to ../../outputs/metrics/patchTST/test_results.csv\n",
       "\n"
@@ -337,7 +337,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\BERAT\\AppData\\Local\\Temp\\ipykernel_2940\\1469885757.py:45: UserWarning: Glyph 128200 (\\N{CHART WITH UPWARDS TREND}) missing from font(s) DejaVu Sans.\n",
+      "/var/folders/s8/pp3cmgsj1h3gqdc1dpxr6yzm0000gn/T/ipykernel_15834/1469885757.py:45: UserWarning: Glyph 128200 (\\N{CHART WITH UPWARDS TREND}) missing from font(s) DejaVu Sans.\n",
       "  plt.savefig(f\"{output_dir}/{file_prefix}_plot.png\")\n"
      ]
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "022e6676",
    "metadata": {},
    "outputs": [],
@@ -384,7 +384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
