--- a/iot-timeseries-forecasting/updated_notebooks/3.1_informer_transformer_model_updated.ipynb
+++ b/iot-timeseries-forecasting/updated_notebooks/3.1_informer_transformer_model_updated.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "ad544107",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "99afb9a9",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "40c9034a",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "af3e3025",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "b0fbdae0",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "fde1a9e7",
    "metadata": {},
    "outputs": [
@@ -102,15 +102,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Epoch 1] Train Loss: 0.0025\n",
+      "[Epoch 1] Train Loss: 0.0081\n",
       "[Epoch 2] Train Loss: 0.0005\n",
-      "[Epoch 3] Train Loss: 0.0006\n",
+      "[Epoch 3] Train Loss: 0.0005\n",
       "[Epoch 4] Train Loss: 0.0005\n",
       "[Epoch 5] Train Loss: 0.0005\n",
       "[Epoch 6] Train Loss: 0.0005\n",
       "[Epoch 7] Train Loss: 0.0005\n",
       "[Epoch 8] Train Loss: 0.0005\n",
-      "[Epoch 9] Train Loss: 0.0004\n",
+      "[Epoch 9] Train Loss: 0.0005\n",
       "[Epoch 10] Train Loss: 0.0005\n"
      ]
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "e4129b15",
    "metadata": {},
    "outputs": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "97e011be",
    "metadata": {},
    "outputs": [],
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "267b7d4f",
    "metadata": {},
    "outputs": [],
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "e6b978d0",
    "metadata": {},
    "outputs": [
@@ -246,9 +246,9 @@
      "output_type": "stream",
      "text": [
       "📊 📈 Train Set Forecast vs True\n",
-      " - MSE   : 0.000387\n",
-      " - MAE   : 0.013912\n",
-      " - SMAPE : 4.67%\n",
+      " - MSE   : 0.000383\n",
+      " - MAE   : 0.013330\n",
+      " - SMAPE : 4.35%\n",
       "✅ Plot saved to ../../outputs/metrics/informer/train_plot.png\n",
       "✅ Results saved to ../../outputs/metrics/informer/train_results.csv\n",
       "\n"
@@ -258,7 +258,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\BERAT\\AppData\\Local\\Temp\\ipykernel_10408\\2992982391.py:44: UserWarning: Glyph 128200 (\\N{CHART WITH UPWARDS TREND}) missing from font(s) DejaVu Sans.\n",
+      "/var/folders/s8/pp3cmgsj1h3gqdc1dpxr6yzm0000gn/T/ipykernel_15616/2992982391.py:44: UserWarning: Glyph 128200 (\\N{CHART WITH UPWARDS TREND}) missing from font(s) DejaVu Sans.\n",
       "  plt.savefig(f\"../../outputs/metrics/informer/{file_prefix}_plot.png\")\n"
      ]
     },
@@ -267,25 +267,19 @@
      "output_type": "stream",
      "text": [
       "📊 📈 Validation Set Forecast vs True\n",
-      " - MSE   : 0.000017\n",
-      " - MAE   : 0.003099\n",
-      " - SMAPE : 2.61%\n",
+      " - MSE   : 0.000014\n",
+      " - MAE   : 0.002651\n",
+      " - SMAPE : 2.25%\n",
       "✅ Plot saved to ../../outputs/metrics/informer/val_plot.png\n",
       "✅ Results saved to ../../outputs/metrics/informer/val_results.csv\n",
-      "\n",
-      "📊 📈 Test Set Forecast vs True\n",
-      " - MSE   : 0.000015\n",
-      " - MAE   : 0.002682\n",
-      " - SMAPE : 1.22%\n"
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\BERAT\\AppData\\Local\\Temp\\ipykernel_10408\\2992982391.py:44: UserWarning: Glyph 128200 (\\N{CHART WITH UPWARDS TREND}) missing from font(s) DejaVu Sans.\n",
-      "  plt.savefig(f\"../../outputs/metrics/informer/{file_prefix}_plot.png\")\n",
-      "C:\\Users\\BERAT\\AppData\\Local\\Temp\\ipykernel_10408\\2992982391.py:44: UserWarning: Glyph 128200 (\\N{CHART WITH UPWARDS TREND}) missing from font(s) DejaVu Sans.\n",
+      "/var/folders/s8/pp3cmgsj1h3gqdc1dpxr6yzm0000gn/T/ipykernel_15616/2992982391.py:44: UserWarning: Glyph 128200 (\\N{CHART WITH UPWARDS TREND}) missing from font(s) DejaVu Sans.\n",
       "  plt.savefig(f\"../../outputs/metrics/informer/{file_prefix}_plot.png\")\n"
      ]
     },
@@ -293,9 +287,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "📊 📈 Test Set Forecast vs True\n",
+      " - MSE   : 0.000014\n",
+      " - MAE   : 0.002511\n",
+      " - SMAPE : 1.14%\n",
       "✅ Plot saved to ../../outputs/metrics/informer/test_plot.png\n",
       "✅ Results saved to ../../outputs/metrics/informer/test_results.csv\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/s8/pp3cmgsj1h3gqdc1dpxr6yzm0000gn/T/ipykernel_15616/2992982391.py:44: UserWarning: Glyph 128200 (\\N{CHART WITH UPWARDS TREND}) missing from font(s) DejaVu Sans.\n",
+      "  plt.savefig(f\"../../outputs/metrics/informer/{file_prefix}_plot.png\")\n"
      ]
     }
    ],
@@ -308,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "93173458",
    "metadata": {},
    "outputs": [],
@@ -341,7 +347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
