optimize hyper parameters of lstm model and save outputs

--- a/iot-timeseries-forecasting/utils/download_and_save_raw_data.ipynb
+++ b/iot-timeseries-forecasting/utils/download_and_save_raw_data.ipynb
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/beratburakkaya/Documents/iot_timeseries_machine_learning_updated/.venv/lib/python3.13/site-packages/urllib3/connectionpool.py:1097: InsecureRequestWarning: Unverified HTTPS request is being made to host 'raw.githubusercontent.com'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
+      "c:\\Users\\aastm-sw\\Desktop\\Berat\\iot_timeseries_machine_learning_updated\\.venv\\Lib\\site-packages\\urllib3\\connectionpool.py:1097: InsecureRequestWarning: Unverified HTTPS request is being made to host 'raw.githubusercontent.com'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
       "  warnings.warn(\n"
      ]
     },
@@ -64,7 +64,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/beratburakkaya/Documents/iot_timeseries_machine_learning_updated/.venv/lib/python3.13/site-packages/urllib3/connectionpool.py:1097: InsecureRequestWarning: Unverified HTTPS request is being made to host 'raw.githubusercontent.com'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
+      "c:\\Users\\aastm-sw\\Desktop\\Berat\\iot_timeseries_machine_learning_updated\\.venv\\Lib\\site-packages\\urllib3\\connectionpool.py:1097: InsecureRequestWarning: Unverified HTTPS request is being made to host 'raw.githubusercontent.com'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
       "  warnings.warn(\n"
      ]
     },
@@ -126,7 +126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
