--- a/iot-timeseries-forecasting/updated_notebooks/2.1_lstm_model_optuna.ipynb
+++ b/iot-timeseries-forecasting/updated_notebooks/2.1_lstm_model_optuna.ipynb
@@ -5,7 +5,9 @@
    "id": "96a8ea15",
    "metadata": {},
    "source": [
-    "utilized from optuna for hyper parameter optimization technic."
+    "utilized from optuna for hyper parameter optimization technic.\n",
+    "\n",
+    "and enhance performance of lstm model via best params"
    ]
   },
   {
